Add about uspage

--- a/Index.html
+++ b/Index.html
@@ -145,7 +145,7 @@
                     <img src="Images/Icon/logo_xpen_white_transp.png" style="height:30px;width:30px; margin-left:20px;" />
                 </div>
                 <div class="col-md-2" style="text-align:center;">
-
+                    <h4 style="color:#fff;"> {{ OrgName}}</h4>
                 </div>
                 <div class="col-sm-5">
                     <div id="profile_button" style="float:right; margin-right:10px; ">
