--- a/Aboutus.html
+++ b/Aboutus.html
@@ -34,7 +34,7 @@
 
 
 
-    
+
 
     <style>
         .loginBox {
@@ -68,11 +68,12 @@
             font-size: smaller;
             color: red;
         }
+
         body {
             font: 400 15px Lato, sans-serif;
             line-height: 1.8;
             color: #818181;
-            background-color:#fafbfc;
+            background-color: #fafbfc;
         }
 
         h2 {
@@ -446,7 +447,7 @@
 
                 <div class="col-md-3">
                     <div class="featured-box nobg border-only left-separator" style="text-align:center;">
-                        <span class="bosre" style="align-self:center;"> <span class="fa fa-comments fa-3x" aria-hidden="true" style="color:#648cff;"></span></span>
+                        <span class="bosre" style="align-self:center;"> <span class="fa fa-exchange fa-3x" aria-hidden="true" style="color:#648cff;"></span></span>
                         <h4>
                             Transaction
                         </h4>
@@ -599,3 +600,4 @@
 
 </body>
 </html>
+
