--- a/Aboutus.html
+++ b/Aboutus.html
@@ -329,6 +329,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="z-index:999;position:absolute;">
                     <li><a ng-click="ToggelLogin()">Login</a></li>
                     <li><a ng-click="GoToRegister()">Register</a></li>
+                    <li><a href="Aboutus.html" ng-click=""></a></li>
                 </ul>
 
             </div>
@@ -350,6 +351,7 @@
                         <li><a href="#"><i class="fa fa-home" style="font-size:30px;color:#000;"></i></a></li>
                         <li><a ng-click="ToggelLogin()">Login</a></li>
                         <li><a ng-click="GoToRegister()">Register</a></li>
+                        <li><a href="Aboutus.html" ng-click=""></a></li>
                     </ul>
                 </div>
 
