Dashboard for Employee

--- a/Index.html
+++ b/Index.html
@@ -83,6 +83,7 @@
     <script src="GAS/Scripts/userTransactionController.js"></script>
     <script src="GAS/Scripts/dashboardController.js"></script>
     <script src="GAS/Services/dashboardService.js"></script>
+    <script src="GAS/Services/dailyExpenseService.js"></script>
 
     <link type="text/css" rel="stylesheet" href="styles/gap.css" />
     <link type="text/css" rel="stylesheet" href="styles/xpen.css" />
