--- a/Login.html
+++ b/Login.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="login" ng-controller="loginCtrl">
 <head>
-    <link rel="icon" type="image/png" href="Images/Icon/Gap_logo.png" />
+    <link rel="icon" type="image/png" href="Images/Icon/gap_icon.png" />
     <meta charset="utf-8">
     <title>GAP</title>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
