--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="gas">
 <head>
 
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
     <script src="Angular_Script/angular.min.js"></script>
-    <script src="Angular_Script/angular-route.js"></script>
+    <script src="Angular_Script/angular-route.js"></script> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <!--For Angular Charts-->
