--- a/Login.html
+++ b/Login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="login" ng-controller="loginCtrl">
 <head>
     <link rel="icon" type="image/png" href="Images/Icon/gap_icon.png" />
@@ -34,7 +34,7 @@
 <body>
     <div class="container-fluid zero_margin" style="position:relative;">
 
-        <div id="topbar" class="row bg_1 hidden-sm hidden-md hidden-lg zero_margin" style="height:60px;position:fixed;">
+        <div id="topbar" class="row bg_1 hidden-sm top-menu-bar hidden-md hidden-lg zero_margin" style="height:60px;position:fixed;">
 
             <div class="col-xs-4">
                 <img src="Images/Icon/logo_xpen_white_transp.png" style="height:30px;width:30px;  margin-left:20px;" />
@@ -43,7 +43,7 @@
                 <h3 class="center_heading">xPen</h3>
             </div>
             <div class="col-xs-4" style="text-align:right;padding-right:0px;margin-right:0px;">
-                <button type="button" class="btn btn-default dropdown-toggle" aria-label="Left Align" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <button type="button" class="btn btn-default dropdown-toggle top-main-menu" aria-label="Left Align" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
                 </button>
 
@@ -60,14 +60,14 @@
 
         <div id="topbar" class="row bg_1 hidden-xs zero_margin" style="height:60px;position:fixed; z-index:5;">
             <div style="margin-top:15px;">
-                <div class="col-md-5">
+                <div class="col-md-5 col-sm-5">
                     <img src="Images/Icon/logo_xpen_blue_transp.png" style="height:30px;width:30px; margin-left:20px;" />
 
                 </div>
-                <div class="col-md-2" style="text-align:center;">
+                <div class="col-md-2 col-sm-2" style="text-align:center;">
                     <h3 class="center_heading">xPen</h3>
                 </div>
-                <div class="col-md-5" style="text-align:right;padding-right:20px;margin-right:0px;">
+                <div class="col-md-5 col-sm-5" style="text-align:right;padding-right:20px;margin-right:0px;">
                     <ul>
                         <li><a href="#"><i class="fa fa-home" style="font-size:30px;color:#000;"></i></a></li>
                         <li><a ng-click="ToggelLogin()">Login</a></li>
