--- a/Login.html
+++ b/Login.html
@@ -33,9 +33,7 @@
 
 <body>
     <div class="container-fluid zero_margin" style="position:relative;">
-
-        <div id="topbar" class="row bg_1 hidden-sm top-menu-bar hidden-md hidden-lg zero_margin" style="height:60px;position:fixed;">
-
+        <div id="topbar" class="row bg_1 hidden-sm top-menu-bar hidden-md hidden-lg zero_margin" style="height:60px;position:fixed;z-index:99;">
             <div class="col-xs-4">
                 <img src="Images/Icon/logo_xpen_white_transp.png" style="height:30px;width:30px;  margin-left:20px;" />
             </div>
@@ -46,13 +44,10 @@
                 <button type="button" class="btn btn-default dropdown-toggle top-main-menu" aria-label="Left Align" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
                 </button>
-
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="z-index:999;position:absolute;">
                     <li><a ng-click="ToggelLogin()">Login</a></li>
                     <li><a ng-click="GoToRegister()">Register</a></li>
-                   
                 </ul>
-
             </div>
         </div>
 
@@ -62,7 +57,6 @@
             <div style="margin-top:15px;">
                 <div class="col-md-5 col-sm-5">
                     <img src="Images/Icon/logo_xpen_blue_transp.png" style="height:30px;width:30px; margin-left:20px;" />
-
                 </div>
                 <div class="col-md-2 col-sm-2" style="text-align:center;">
                     <h3 class="center_heading">xPen</h3>
@@ -71,11 +65,9 @@
                     <ul>
                         <li><a href="#"><i class="fa fa-home" style="font-size:30px;color:#000;"></i></a></li>
                         <li><a ng-click="ToggelLogin()">Login</a></li>
-                        <li><a ng-click="GoToRegister()">Register</a></li>
-                       
+                        <li><a ng-click="GoToRegister()">Register</a></li>            
                     </ul>
                 </div>
-
             </div>
         </div>
 
