--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html ng-app="gas">
 <head>
 
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
     <script src="Angular_Script/angular.min.js"></script>
-    <script src="Angular_Script/angular-route.js"></script> 
+    <script src="Angular_Script/angular-route.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <!--For Angular Charts-->
@@ -86,7 +86,8 @@
     <script src="GAS/Services/dailyExpenseService.js"></script>
     <script src="GAS/Scripts/managerConroller.js"></script>
     <!--<script src="GAS/Services/constantService.js"></script>-->
-
+    <script src="GAS/Scripts/orgController.js"></script>
+    <script src="GAS/Services/OrgService.js"></script>
 
     <link type="text/css" rel="stylesheet" href="styles/gap.css" />
     <link type="text/css" rel="stylesheet" href="styles/xpen.css" />
@@ -117,6 +118,7 @@
                     </div>
                     <div ng-show="DDMenu" class=" col-xs-12 layout-dropdown-content" style="color:#10023c;float:right; margin-top:30px;margin-right:30px; z-index:999;">
                         <div class="layout-dropdown-content">
+                            <a href="#!organization" ng-click="DDMenu=false" ng-show="Role=='SuperAdmin'">Organization</a>
                             <a href="#!main" ng-click="DDMenu=false" ng-show="Role=='Admin'">Dashboard</a>
                             <a href="#!employedashboard" ng-click="DDMenu=false" ng-show="Role=='Employee'">EDashboard</a>
                             <a href="#!user" ng-click="DDMenu=false" ng-show="Role=='Admin'||Role=='SuperAdmin'">User</a>
@@ -189,18 +191,16 @@
                         </div>
 
                         <ul class="nav nav-pills nav-stacked">
-
-                            <li ng-class="getClass('main')"><a href="#!old" ng-show="false"><i class="fa fa-tachometer" style="color:#000;" aria-hidden="true">&nbsp;oldDashboard</i></a></li>
-                            <li ng-class="getClass('main')"><a href="#!main"><i class="fa fa-tachometer" style="color:#000;" aria-hidden="true">&nbsp;Dashboard</i></a></li>
-                            <li ng-class="getClass('managerdashboard')"><a href="#!managerdashboard" ng-show="false"><i class="fa fa-tachometer fa-2x" style="color:#000;" aria-hidden="true">&nbsp;ManagerDashboard</i></a></li>
+                            <li ng-class="getClass('main')"><a href="#!main"><i class="fa fa-tachometer" ng-hide="Role=='SuperAdmin'" style="color:#000;" aria-hidden="true">&nbsp;Dashboard</i></a></li>
+                            <li ng-class="getClass('user')"><a href="#!organization" ng-show="Role=='SuperAdmin'"><i class="fa fa-user" style="color:#000;" aria-hidden="true">&nbsp;Organization</i></a></li>
                             <li ng-class="getClass('user')"><a href="#!user" ng-show="Role=='Admin'||Role=='SuperAdmin'"><i class="fa fa-user" style="color:#000;" aria-hidden="true">&nbsp;User</i></a></li>
                             <li ng-class="getClass('accounts')"><a href="#!accounts" ng-show="Role=='Admin'"><i class="fa fa-th-large" style="color:#000;" aria-hidden="true">&nbsp;Accounts</i></a></li>
                             <li ng-class="getClass('project')"><a href="#!project" ng-show="Role=='Admin'||Role=='Manager'||Role=='Employee'"><i class="fa fa-tasks fa-2x" style="color:#000;" aria-hidden="true">&nbsp;My Projects</i></a></li>
                             <li ng-class="getClass('activity')"><a href="#!activity" ng-hide="Role=='Individual'||Role=='SuperAdmin'"><i class="fa fa-bookmark-o fa-2x" style="color:#000;" aria-hidden="true">&nbsp;My Activity</i></a></li>
                             <li ng-class="getClass('transaction')"><a href="#!transaction" ng-show="Role=='Admin'"><i class="fa fa-exchange" style="color:#000;" aria-hidden="true">&nbsp;Transaction</i></a></li>
                             <li ng-class="getClass('approval')"><a href="#!approval" ng-show="Role=='Admin'||Role=='Manager'"><i class="fa fa-sticky-note fa-2x" style="color:#000;" aria-hidden="true">&nbsp;Tasks</i></a></li>
-                            <li ng-class="getClass('expense')"><a href="#!expense"><i class="fa fa-inr fa-2x" style="color:#000;" aria-hidden="true">&nbsp;My Expenses</i></a></li>
-                            <li ng-class="getClass('request')"><a href="#!request" ng-show="Role=='SuperAdmin'">Request</a></li>
+                            <li ng-class="getClass('expense')"><a href="#!expense" ng-hide="Role=='SuperAdmin'"><i class="fa fa-inr fa-2x" style="color:#000;" aria-hidden="true">&nbsp;My Expenses</i></a></li>
+                            <li ng-class="getClass('request')"><a href="#!request" ng-show="Role=='SuperAdmin'"><i class="fa fa-inr fa-2x" style="color:#000;" aria-hidden="true">&nbsp;Request</i></a></li>
                             <li ng-class="getClass('tax')"><a href="#!tax" ng-show="Role=='Admin'"><i class="fa fa-file-text" style="color:#000;" aria-hidden="true">&nbsp;Tax</i></a></li>
                             <li ng-class="getClass('UserTrans')"><a href="#!UserTrans" ng-show="Role=='Admin'"><i class="fa fa-money" style="color:#000;" aria-hidden="true">&nbsp;UserTransaction</i></a></li>
 
